# Keel

./: .clang-format  .editorconfig  .gitignore  Cargo.toml  Keel.cabal  README.md  alloc.c  alloc.h  keelc.c  makefile  parser.c  parser.h  test.kl
ast/: Cargo.toml
ast/src/: expression.rs  impl_from.rs  lib.rs  node.rs  statement.rs
keelc/: mod.rs
keelc/parser/: ast.rs
parser/: Cargo.toml
parser/src/: core.rs  error.rs  lib.rs
scanner/: Cargo.toml
scanner/src/: lib.rs  token.rs
src/: lib.rs
src/keelc/: fast_lexer.rs  lexer.rs  readme
src/keelc/Keel/: Main.hs
src/keelc/Keel/Parser/: Keel-0.1.rl
src/keelc/parser/: keyword.rs
src/main/: Main.hs
